Fixed bug #70959 (ArrayObject unserialize does not restore protected fields)